<resources>
    <string name="app_name">Ake</string>

    <string name="jma">気象庁</string>
    <string name="clothes_index">服装指数</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="time_00_06">00:00 - 06:00</string>
    <string name="time_06_12">06:00 - 12:00</string>
    <string name="time_12_18">12:00 - 18:00</string>
    <string name="time_18_24">18:00 - 24:00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tenki_jp">tenki.jp</string>
    <string name="empty">--</string>
    <string name="percent">%</string>
</resources>
