<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             tools:context=".ui.main.JMAFragment" android:id="@+id/frameLayout2">

    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/jma_fragment_txv_today_weather_title"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/jma_fragment_img_today_weather"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="@+id/textView5" tools:text="曇りのち晴れ"
                    android:textColor="@android:color/black"/>
            <ImageView
                    android:src="@drawable/ic_launcher_background"
                    android:layout_width="50dp"
                    android:layout_height="50dp" android:id="@+id/jma_fragment_img_today_weather"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/jma_fragment_txv_today_weather_title"
                    app:layout_constraintStart_toStartOf="@+id/jma_fragment_txv_today_weather_title"
                    app:layout_constraintBottom_toTopOf="@+id/textView18" android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/time_00_06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/jma_fragment_img_today_weather"
                    android:layout_marginStart="64dp"/>
            <TextView
                    android:text="@string/rainy_percent"
                    android:layout_height="wrap_content" android:id="@+id/jma_fragment_txv_today_00_06_rainy_percent"
                    app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView5" android:textColor="@android:color/black"
                    android:textSize="14sp" android:textAlignment="textEnd" tools:text="80%"
                    android:layout_width="30dp"/>
            <TextView
                    android:text="@string/time_06_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="@+id/textView5" android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/rainy_percent"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/jma_fragment_txv_today_06_12_rainy_percent"
                    app:layout_constraintTop_toTopOf="@+id/textView9"
                    app:layout_constraintStart_toEndOf="@+id/textView9" android:layout_marginStart="16dp"
                    android:textColor="@android:color/black" android:textAlignment="textEnd" tools:text="80%"/>
            <TextView
                    android:text="@string/time_12_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    app:layout_constraintStart_toStartOf="@+id/textView9"/>
            <TextView
                    android:text="@string/rainy_percent"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/jma_fragment_txv_today_12_18_rainy_percent"
                    app:layout_constraintTop_toTopOf="@+id/textView12"
                    app:layout_constraintStart_toEndOf="@+id/textView12" android:layout_marginStart="16dp"
                    android:textColor="@android:color/black" tools:text="-%" android:textAlignment="textEnd"/>
            <TextView
                    android:text="@string/time_18_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/textView12"
                    app:layout_constraintStart_toStartOf="@+id/textView12"
                    android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/rainy_percent"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/jma_fragment_txv_today_18_24_rainy_percent"
                    app:layout_constraintTop_toTopOf="@+id/textView15"
                    app:layout_constraintStart_toEndOf="@+id/textView15" android:layout_marginStart="16dp"
                    android:textColor="@android:color/black" android:textAlignment="textEnd" tools:text="10%"/>
            <TextView
                    android:text="@string/tomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView18" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/jma_fragment_txv_tomorrow_weather_title"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/jma_fragment_tomorrow_weather"
                    app:layout_constraintStart_toStartOf="@+id/textView18"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="@+id/textView19" tools:text="晴れ"
                    android:textColor="@android:color/black"/>
            <ImageView
                    android:src="@drawable/ic_launcher_background"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/jma_fragment_tomorrow_weather"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView28"
                    app:layout_constraintTop_toBottomOf="@+id/jma_fragment_txv_tomorrow_weather_title"
                    app:layout_constraintStart_toStartOf="@+id/jma_fragment_txv_tomorrow_weather_title" android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/time_00_06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView19" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView18"
                    app:layout_constraintStart_toStartOf="@+id/textView15"/>
            <TextView
                    android:text="@string/rainy_percent"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/jma_fragment_txv_tomorrow_00_06_rainy_percent"
                    app:layout_constraintTop_toTopOf="@+id/textView19"
                    app:layout_constraintStart_toEndOf="@+id/textView19" android:layout_marginStart="16dp"
                    android:textColor="@android:color/black" tools:text="-%" android:textAlignment="textEnd"/>
            <TextView
                    android:text="@string/time_06_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView22" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView19"
                    app:layout_constraintStart_toStartOf="@+id/textView19"/>
            <TextView
                    android:text="@string/rainy_percent"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/jma_fragment_txv_tomorrow_06_12_rainy_percent"
                    android:textColor="@android:color/black" android:textAlignment="textEnd" tools:text="10%"
                    app:layout_constraintStart_toEndOf="@+id/textView22"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView22"/>
            <TextView
                    android:text="@string/time_12_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView25" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView22"
                    app:layout_constraintStart_toStartOf="@+id/textView22"/>
            <TextView
                    android:text="@string/rainy_percent"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/jma_fragment_txv_tomorrow_12_18_rainy_percent"
                    android:textColor="@android:color/black" tools:text="90%" android:textAlignment="textEnd"
                    app:layout_constraintStart_toEndOf="@+id/textView25"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="@+id/textView25"/>
            <TextView
                    android:text="@string/time_18_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView28" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView25"
                    app:layout_constraintStart_toStartOf="@+id/textView25"
            />
            <TextView
                    android:text="@string/rainy_percent"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/jma_fragment_txv_tomorrow_18_24_rainy_percent"
                    app:layout_constraintTop_toTopOf="@+id/textView28"
                    app:layout_constraintStart_toEndOf="@+id/textView28" android:layout_marginStart="16dp"
                    android:textColor="@android:color/black" tools:text="20%" android:textAlignment="textEnd"/>
            <TextView
                    android:text="@string/jma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView31" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView28"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="10sp"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>